--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Ronak Lala</title>
-    <link rel="shortcut icon" type="image/png" href="images/icons/fevicon.png">
+    <link rel="shortcut icon" type="image/PNG" href="images/icons/fevicon.PNG">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content=#000000>
     <meta name="description"
@@ -280,9 +280,9 @@
                     <ul class="row items">
                         <li onclick="" class="web col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/1.png">
+                                <img src="images/thumbnails/1.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/1.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/1.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Product Renting System in PHP, This was selected for my Final Year project in the Exhibition"> <i class="far fa-eye"></i>
                                     </a>
@@ -293,9 +293,9 @@
                         </li>
                         <li onclick="" class="web col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/2.png">
+                                <img src="images/thumbnails/2.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/2.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/2.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="The online Bookstore System made by me in PHP.">
                                         <i class="far fa-eye"></i>
@@ -307,9 +307,9 @@
                         </li>
                         <li onclick="" class="js col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/3.png">
+                                <img src="images/thumbnails/3.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/3.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/3.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Animated Login Form in HTML CSS & JavaScript.">
                                         <i class="far fa-eye"></i>
@@ -322,9 +322,9 @@
 
                         <li onclick="" class="js col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/4.png">
+                                <img src="images/thumbnails/4.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/4.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/4.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Covid 19 Resource in Advance JavaScript & Jquery.">
                                         <i class="far fa-eye"></i>
@@ -336,9 +336,9 @@
                         </li>
                         <li onclick="" class="web col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/6.png">
+                                <img src="images/thumbnails/6.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/6.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/6.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Gaming Portfolio Website for a team named Battle Of Heroes in HTML CSS & JavaScript.">
                                         <i class="far fa-eye"></i>
@@ -350,9 +350,9 @@
                         </li>
                         <li onclick="" class="js col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/5.png">
+                                <img src="images/thumbnails/5.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/5.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/5.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Vehicle Information Gathering System in Advance JavaScript.">
                                         <i class="far fa-eye"></i>
@@ -364,9 +364,9 @@
                         </li>
                         <li onclick="" class="web col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/8.png">
+                                <img src="images/thumbnails/8.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/8.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/8.PNG" title="View Image" class="openButton"
                                         data-fancybox data-caption="Blogging Website in PHP">
                                         <i class="far fa-eye"></i>
                                     </a>
@@ -377,9 +377,9 @@
                         </li>
                         <li onclick="" class="web col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/7.png">
+                                <img src="images/thumbnails/7.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/7.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/7.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Ecommerce System in Php and Jquery AJAX.">
                                         <i class="far fa-eye"></i>
@@ -391,9 +391,9 @@
                         </li>
                         <li onclick="" class="web col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/9.png">
+                                <img src="images/thumbnails/9.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/9.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/9.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Ecommerce System in Php and Jquery AJAX.">
                                         <i class="far fa-eye"></i>
@@ -405,9 +405,9 @@
                         </li>
                          <li onclick="" class="app col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/19.png">
+                                <img src="images/thumbnails/19.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/19.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/19.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Inspiration UI Design in Flutter">
                                         <i class="far fa-eye"></i>
@@ -419,9 +419,9 @@
                         </li>
                         <li onclick="" class="web col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/10.png">
+                                <img src="images/thumbnails/10.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/10.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/10.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Blogging Website about Marketing in FrontEnd.">
                                         <i class="far fa-eye"></i>
@@ -433,9 +433,9 @@
                         </li>
                         <li onclick="" class="web col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/12.png">
+                                <img src="images/thumbnails/12.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/12.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/12.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="A Portfolio For a company Named Developing Today.">
                                         <i class="far fa-eye"></i>
@@ -447,9 +447,9 @@
                         </li>
                         <li onclick="" class="web col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/11.png">
+                                <img src="images/thumbnails/11.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/11.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/11.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Blogging Website for Studio Ambrosia with FronEnd.">
                                         <i class="far fa-eye"></i>
@@ -461,9 +461,9 @@
                         </li>
                         <li onclick="" class="others col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/13.png">
+                                <img src="images/thumbnails/13.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/13.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/13.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Bank Management System in VB.Net.">
                                         <i class="far fa-eye"></i>
@@ -475,9 +475,9 @@
                         </li>
                         <li onclick="" class="others col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/14.png">
+                                <img src="images/thumbnails/14.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/14.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/14.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Tic Tac Toe in python.">
                                         <i class="far fa-eye"></i>
@@ -489,9 +489,9 @@
                         </li>
                         <li onclick="" class="js col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/15.png">
+                                <img src="images/thumbnails/15.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/15.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/15.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Digital Time zone in Javascript.">
                                         <i class="far fa-eye"></i>
@@ -503,9 +503,9 @@
                         </li>
                         <li onclick="" class="js col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/16.png">
+                                <img src="images/thumbnails/16.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/16.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/16.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Music Player in Javascript.">
                                         <i class="far fa-eye"></i>
@@ -517,9 +517,9 @@
                         </li>
                          <li onclick="" class="js col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/17.png">
+                                <img src="images/thumbnails/17.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/17.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/17.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="Youtube Clone in React JS.">
                                         <i class="far fa-eye"></i>
@@ -531,9 +531,9 @@
                         </li>
                         <li onclick="" class="js col-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="images/thumbnails/18.png">
+                                <img src="images/thumbnails/18.PNG">
                                 <div class="icons">
-                                    <a href="images/thumbnails/18.png" title="View Image" class="openButton"
+                                    <a href="images/thumbnails/18.PNG" title="View Image" class="openButton"
                                         data-fancybox
                                         data-caption="To-Do Application in React JS.">
                                         <i class="far fa-eye"></i>
